# py-launch-blueprint

./: .claconfig.json  .codecov.yml  .cog.cocohito.toml  .cog.cod.toml  .coverage  .dockerignore  .gitignore  .gitlint  .gitmessage  .gitmodules  .license  .licenseignore  .pre-commit-config.yaml  .pre-commit-hook.yaml  .prettierrc.yaml  .readthedocs.yaml  .ruff.toml  .secretlintignore  .taplo.toml  .windsurfrules  .yamllint.yml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  EXAMPLECLI.md  Justfile  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  cls  cog-minimal.toml  cog.toml  convert_to_utf8.py  coverage.xml  detect-python.sh  detect_encoding.py  doc-template.rule  (+10 more)
.cursor/rules/: doc-template.mdc  projectenv.mdc
.devcontainer/: Dockerfile  _container_setup.sh  devcontainer.json  setup.sh
.github/: CONTRIBUTING.md  FUNDING.yml  pull_request_template.md
.github/ISSUES_TEMPLATE/: bug_report.md  feature_request.md
.github/ISSUE_TEMPLATE/: 01-feature-request.yml  02-documentation-request.yml  03-bug-report.yml  bug_report.yml  config.yml  documentation.yml  feature_request.yml  question.yml
.github/PULL_REQUEST_TEMPLATE/: bug-pr.md  bug_fix_pr.md  config.yml  dependency_update_pr.md  documentation_pr.md  feature_pr.md  pull_request_template.md
.github/scripts/: check_templates.py
.github/workflows/: changelog.yml  ci.yaml  cla-verification.yml  cla.yaml  cla.yml  code-quality.yml  codeql.yml  dependency-review.yml  enforce-templates.yml  manual-pr-security-scan.yml  release.yaml  release.yml  security.yaml  update-contributors.yml  validate-templates.yml
.windsurf/rules/: justfile-rules.md
docs/: CI_CD.md  CUSTOMIZATION.md  DEVELOPMENT.md  EXTENSIONS.md  Makefile  TOOLS.md  TROUBLESHOOTING.md  VERSIONING.md  cla_faq.md  conf.py  index.rst  license-check.md  template_guide.md
docs/cla/: corporate_cla.md  individual_cla.md
docs/source/: conf.py  docs.md  github-templates.md  index.md  license-check.md
docs/source/_templates/: base.html
docs/source/about/: comparison.md  features.md  index.md  philosophy.md
docs/source/contributing/: cla.md  cla_faq.md  development_workflow.md  index.md
docs/source/contributing/cla/: cla-setup-guide.md  corporate_cla.md  individual_cla.md
docs/source/reference/: api_reference.md  cli_reference.md  configuration_files.md  index.md  project_structure.md  publishing.md  pypl-publishing.md  versioning.md
docs/source/tasks/: contributing_code.md  debugging_configuration.md  index.md  managing_dependencies.md  releasing_code.md  running_locally.md  setting_up_development.md  setting_up_project.md  testing_code.md  type_checking_code.md  using_ci_cd.md  writing_clean_code.md
docs/source/tools/: cla-assistant.md  code-cov.md  docker.md  github_actions.md  index.md  justfiles.md  license-check.md  makefiles.md  mypy.md  precommit_hooks.md  pytest.md  ruff.md  taplo.md  uv.md  vs_code.md  yaml_lint.md
docs/source/tutorials/: cli_example.md  extending_template.md  full_project_setup.md  index.md
docs/troubleshooting/: TEMPLATE.md  changelog-disable.md  codecov-feature.md  cross-platform-issues.md  docker-feature.md  warning-ci-cd.md
py_launch_blueprint/: __init__.py  _version.py  projects.py
scripts/: check_extension_sync.py  check_license.py  fix-license.sh  fix_yaml.py  install_go.sh  update-changelog.sh  update_changelog.sh  update_contributors.ps1  update_contributors.py  update_contributors.sh  validate-commits.sh
template_docs/: conf.py  index.rst  mkdocs.yml  modules.rst  py_launch_blueprint.rst
template_docs/docs/: index.md  usage.md
template_docs/docs/about/: changelog.md  license.md
template_docs/docs/contributing/: development.md  guidelines.md  standards.md
template_docs/docs/features/: code-quality.md  dev-tools.md  overview.md  type-safety.md  vscode.md
template_docs/docs/getting-started/: installation.md  quickstart.md
template_docs/docs/stylesheets/: extra.css
tests/: __init__.py  test_api.py  test_cli.py  test_config.py
