[project]
name = "py_launch_blueprint"
dynamic = ["version"] #make version dynamic
description = "CLI tools for interacting with Py, including project search functionality"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Steve Morin", email = "steve.morin@gmail.com" }]
dependencies = [
    "click>=8.1.0",
    "questionary>=2.0.0",
    "python-dotenv>=1.0.0",
    "thefuzz>=0.19.0",
    "python-Levenshtein>=0.21.0", # For better performance with thefuzz
    "pyperclip>=1.8.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pre-commit>=4.1.0",
    "types-requests",
    "types-Pygments",
    "cogapp",
]

docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme",
    "furo",
    "myst-parser",
    "sphinx-autodoc-typehints",
    "cogapp",
    "sphinx-copybutton",
    "sphinx-autobuild",
    "sphinxext-opengraph",      # https://github.com/wpilibsuite/sphinxext-opengraph
]


[project.scripts]
py-projects = "py_launch_blueprint.projects:main"

[build-system]
requires = ["hatchling", "hatch-vcs", "setuptools>=64", "setuptools-scm>=8"]
build-backend = "hatchling.build"

[tool.setuptools_scm]
write_to = "py_launch_blueprint/_version.py"
fallback_version = "0.0.1"

[tool.ruff]
# Target Python Version
target-version = "py310"

# Line length
line-length = 88

lint.select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "RUF", # Ruff-specific rules
    "W",   # pycodestyle warnings
    "YTT", # flake8-2020
    "S",   # flake8-bandit
]

# Ignore specific rules
lint.ignore = [
    # "E501",  # line length violations
]

# Allow autofix behavior for specific rules
fix = true
lint.unfixable = [] # Rules that should not be fixed automatically

# Exclude files/folders
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "docs/source/conf.py",
]

[tool.ruff.lint.pycodestyle]
max-line-length = 88

# Per-file-ignores
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # Ignore unused imports in __init__.py files
"tests/*" = ["S101", "S105", "S106"] # Ignore assert statements in tests
"py_launch_blueprint/_version.py" = [
    "ALL",
] # Ignore all Ruff checks for version.py
# S101: This check flags the use of assert statements. The reason is that assert statements are removed when Python code is optimized (run with the -O flag), which can lead to security vulnerabilities if assert is used for security checks.
# S105: This generally flags hardcoded password strings in code.
# S106: This generally flags hardcoded password variables in code.

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# addopts = "-v"

[tool.mypy]
# Python version
python_version = "3.10"

# Strict mode
strict = true

# Imports management
ignore_missing_imports = false
follow_imports = "normal"
follow_imports_for_stubs = true

# Disallow dynamic typing
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true

# None and Optional handling
no_implicit_optional = true
strict_optional = true

# Warnings
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

# Error messages
pretty = true
show_error_codes = true
show_column_numbers = true

# Per-module settings example
[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "py_launch_blueprint/_version.py"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version" # No commit ID or dirty flag

[tool.hatch.build.targets.wheel]
packages = ["py_launch_blueprint"]

[tool.hatch.build.targets.sdist]
include = ["py_launch_blueprint", "docs", "pyproject.toml", "README.md"]
